Revise auto-draft note for EM feedback

--- a/newsletter/2025-09-02.md
+++ b/newsletter/2025-09-02.md
@@ -19,4 +19,4 @@ Consider a small experiment where team members can test a new AI tool for automa
 ### Call to Action
 We invite team members to participate in upcoming pilots and polls regarding new AI tools and features. Your feedback is crucial for shaping our product development!
 
-— Auto‑draft by AI agent, please review before publishing.
+— Auto‑draft by AI agent, please contact the EMs for any feedback.
