Revise newsletter content and section formatting

--- a/newsletter/2025-09-03.md
+++ b/newsletter/2025-09-03.md
@@ -17,29 +17,23 @@ Together, we'll make this a valuable resource for everyone. Thank you for being 
 
 ---
 
-AI in Trade Finance
+1) AI in Trade Finance
 OpenAI announced data residency in Europe, saying it builds on its enterprise-grade data privacy, security, and compliance programs so customer data can be stored and processed in-region. [Source](https://openai.com/index/introducing-data-residency-in-europe)
 
 What this means for us
 - We can evaluate Europe-resident model deployments as an option for handling EU trade data to reduce cross-border data transfer risk and support GDPR-aligned controls. [Source](https://openai.com/index/introducing-data-residency-in-europe)
 - Immediate actions: add “data residency available” to our vendor checklist, engage Legal/Compliance on requirements for in-region processing, and scope a small pilot using synthetic/anonymized trade documents.
 
-Tip of the Week
-When validating models against trade documents, use synthetic or redacted samples, keep prompt and schema templates in version control, and log model inputs/outputs (with retention limits). This reduces leakage risk and makes behavior reproducible.
+2) Tip of the Week
+When adding LLM-assisted workflows, enforce prompt/output logging and a mandatory human review step for any decision that affects credit, payments, or compliance. Logs make audits and model governance feasible while human review limits risk.
 
-Internal Spotlight
-No submission this week — suggested safe experiment:
-- 4-week pilot: Europe-resident LLM for automated document classification (BLs/invoices).
-- Data: fully synthetic + small, redacted holdout set.
-- Success metrics: classification precision >90% on key fields, average latency <1s per doc, no raw customer data stored outside the EU.
-- Owners: Product, Compliance, and ML Engineer; weekly check-ins.
+3) Internal Spotlight
+Small, safe pilot: run an anonymized-document summarization test using non-sensitive historical trade documents (PII removed). Metrics: time saved per document, accuracy vs. human summary, and number of review edits. Keep results and raw outputs offline and share aggregated findings only.
 
-Quick Hits
+
+4)Quick Hits
 - Zopa acquires payments automation firm Rvvup, a provider of AI-based checkout payment tools. [Source](https://www.finextra.com/newsarticle/46527/zopa-acquires-payments-automation-firm-rvvup?utm_medium=rssfinextra&utm_source=finextrafeed)
 - Visa will add sustainability data from Ample Earth to merchant transactions. [Source](https://www.finextra.com/pressarticle/106891/visa-to-add-sustainability-data-from-ample-earth-to-merchant-transactions?utm_medium=rssfinextra&utm_source=finextrafeed)
 - Finom has rolled out an AI accountant feature for German customers. [Source](https://www.finextra.com/pressarticle/106885/finom-rolls-out-ai-accountant-for-german-customers?utm_medium=rssfinextra&utm_source=finextrafeed)
-
-CTA for pilots/polls
-Want to join the EU-residency pilot or vote priorities? Reply to this thread or post in #ai-pilots with your role and capacity by Sep 17.
 
 — Auto‑draft by AI agent, please contact the EMs for feedback.
