Revise newsletter content for clarity and detail

--- a/newsletter/2025-09-03.md
+++ b/newsletter/2025-09-03.md
@@ -17,23 +17,19 @@ Together, we'll make this a valuable resource for everyone. Thank you for being 
 
 ---
 
-1) AI in Trade Finance
-OpenAI announced data residency in Europe, saying it builds on its enterprise-grade data privacy, security, and compliance programs so customer data can be stored and processed in-region. [Source](https://openai.com/index/introducing-data-residency-in-europe)
-
-What this means for us
-- We can evaluate Europe-resident model deployments as an option for handling EU trade data to reduce cross-border data transfer risk and support GDPR-aligned controls. [Source](https://openai.com/index/introducing-data-residency-in-europe)
-- Immediate actions: add “data residency available” to our vendor checklist, engage Legal/Compliance on requirements for in-region processing, and scope a small pilot using synthetic/anonymized trade documents.
+1) AI in Trade Finance — OpenAI data residency (Europe)
+OpenAI announced data residency for Europe, extending its enterprise-grade privacy, security, and compliance offerings to let customers keep data in-region for model use and fine-tuning [Source](https://openai.com/index/introducing-data-residency-in-europe).  
+What this means for us: this reduces a barrier for EU-based customers concerned about cross-border data flows and regulatory compliance when using cloud-hosted AI. Consider data-residency options when proposing AI-enabled features to European clients (e.g., document summarization, KYC assist).
 
 2) Tip of the Week
 When adding LLM-assisted workflows, enforce prompt/output logging and a mandatory human review step for any decision that affects credit, payments, or compliance. Logs make audits and model governance feasible while human review limits risk.
 
-3) Internal Spotlight
+3) Internal Spotlight (suggested experiment)
 Small, safe pilot: run an anonymized-document summarization test using non-sensitive historical trade documents (PII removed). Metrics: time saved per document, accuracy vs. human summary, and number of review edits. Keep results and raw outputs offline and share aggregated findings only.
 
-
 4) Quick Hits
-- Zopa acquires payments automation firm Rvvup, a provider of AI-based checkout payment tools. [Source](https://www.finextra.com/newsarticle/46527/zopa-acquires-payments-automation-firm-rvvup?utm_medium=rssfinextra&utm_source=finextrafeed)
-- Visa will add sustainability data from Ample Earth to merchant transactions. [Source](https://www.finextra.com/pressarticle/106891/visa-to-add-sustainability-data-from-ample-earth-to-merchant-transactions?utm_medium=rssfinextra&utm_source=finextrafeed)
-- Finom has rolled out an AI accountant feature for German customers. [Source](https://www.finextra.com/pressarticle/106885/finom-rolls-out-ai-accountant-for-german-customers?utm_medium=rssfinextra&utm_source=finextrafeed)
+- Finom has launched an AI accountant for German customers, expanding AI-assisted bookkeeping in SME banking [Source](https://www.finextra.com/pressarticle/106885/finom-rolls-out-ai-accountant-for-german-customers?utm_medium=rssfinextra&utm_source=finextrafeed).  
+- Visa will add sustainability data from Ample Earth into merchant transactions to enrich payments data with climate-relevant metrics [Source](https://www.finextra.com/pressarticle/106891/visa-to-add-sustainability-data-from-ample-earth-to-merchant-transactions?utm_medium=rssfinextra&utm_source=finextrafeed).  
+- Zopa has acquired Rvvup, a payments automation firm that provides AI-based checkout payment tools [Source](https://www.finextra.com/newsarticle/46527/zopa-acquires-payments-automation-firm-rvvup?utm_medium=rssfinextra&utm_source=finextrafeed).
 
 — Auto‑draft by AI agent, please contact the EMs for feedback.
